--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "gitpush-clubsphere",
+  "name": "clubsphere-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "ClubSphere Backend API",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
+    "mongodb": "^6.3.0",
+    "stripe": "^14.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
